objects/ssot__Specimen__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BodySiteId__c</fullName>
        <label>Body Site</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionDeviceCodeId__c</fullName>
        <label>Collection Device Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionDurationNumber__c</fullName>
        <label>Collection Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionDurationUomId__c</fullName>
        <label>Collection Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionEndDateTime__c</fullName>
        <label>Collection End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionMethodCodeId__c</fullName>
        <label>Collection Method Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionQuantityUomId__c</fullName>
        <label>Collection Quantity Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionQuantity__c</fullName>
        <label>Collection Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionStartDateTime__c</fullName>
        <label>Collection Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CollectorRecordId__c</fullName>
        <label>Collector Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectorRecordObject__c</fullName>
        <label>Collector Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConditionCodeId__c</fullName>
        <label>Condition Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FastingDurationNumber__c</fullName>
        <label>Fasting Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FastingDurationUomId__c</fullName>
        <label>Fasting Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FastingStatusCodeId__c</fullName>
        <label>Fasting Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FeatureCodeId__c</fullName>
        <label>Feature Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupingMethod__c</fullName>
        <label>Grouping Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Specimen Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivedDateTime__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceReferenceRecordId__c</fullName>
        <label>Source Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceReferenceRecordObject__c</fullName>
        <label>Source Reference Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Specimen_BodySiteId_map_CodeSet_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specimen_BodySiteId_map_CodeSet_Id_N_1</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>Specimen_BodySiteId_map_CodeSet_Id_N_1</relationshipLabel>
        <relationshipName>Specimen_BodySiteId_map_CodeSet_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Specimen_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specimen_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>Specimen_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>Specimen_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Specimen_TypeCodeId_map_CodeSet_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specimen_TypeCodeId_map_CodeSet_Id_N_1</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>Specimen_TypeCodeId_map_CodeSet_Id_N_1</relationshipLabel>
        <relationshipName>Specimen_TypeCodeId_map_CodeSet_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__StatusCode__c</fullName>
        <label>Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TypeCodeId__c</fullName>
        <label>Type Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageCodeId__c</fullName>
        <label>Usage Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512777829_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specimen_SourceReferenceRecordId_map_rel</label>
        <referenceTo>ssot__Patient__dlm</referenceTo>
        <relationshipLabel>Specimen_SourceReferenceRecordId_map_rel</relationshipLabel>
        <relationshipName>rel_1739512777829_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512780155_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specimen_CollectorRecordId_map_Accou_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Specimen_CollectorRecordId_map_Accou_rel</relationshipLabel>
        <relationshipName>rel_1739512780155_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512782234_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specimen_SourceReferenceRecordId_map_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Specimen_SourceReferenceRecordId_map_rel</relationshipLabel>
        <relationshipName>rel_1739512782234_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>